--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.kvto</groupId>
+    <groupId>org.mindstack</groupId>
     <artifactId>minterpreter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
-    <distributionManagement>
-        <repository>
-            <id>github</id>
-            <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/Mindustack/Minterpreter</url>
-        </repository>
-    </distributionManagement>
+  <!-- <distributionManagement>
+    <repository>
+      <id>ossrh</id>
+      <name>Central Repository OSSRH</name>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement> -->
+
 
 
     <properties>
