--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.mindstack</groupId>
+    <groupId>org.mindustack</groupId>
     <artifactId>minterpreter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
-  <!-- <distributionManagement>
-    <repository>
-      <id>ossrh</id>
-      <name>Central Repository OSSRH</name>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement> -->
 
 
 
