--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.mindustack</groupId>
+    <groupId>io.github.mindustack</groupId>
     <artifactId>minterpreter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
+  <distributionManagement>
+    <repository>
+      <id>ossrh</id>
+      <name>snapshot</name>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+    </repository>
+  </distributionManagement>
 
 
 
